<resources>
    <string name="app_name">CloudKitchen</string>
    <string name="menu_home">Home</string>
    <string name="search">Search</string>
    <string name="search_area_town_city">Search area, town, city</string>
    <string name="dining">Dining</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_watch_history">Watch History</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_terms">Terms and Conditions</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="menu_privacy">Privacy Policy</string>
    <string name="menu_feedback">Feedback</string>
    <string name="collection">Collections</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="add_select_location">Add/Select location</string>
    <string name="use_my_location">Use my location</string>
    <string name="home">Home</string>
    <string name="home_address">Address: Mallampet Rd, Mallampet, Hyderabad, Telangana 502325</string>
    <string name="Rs">\u20B9</string>
    <string name="weekly_subscription">Weekly Subscription</string>
    <string name="monthly_subscription">Monthly Subscription</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="enter_your_phone_number_to_proceed">Enter your phone number to proceed</string>
    <string name="get_started">GET STARTED</string>
    <string name="resend_otp">Resend OTP?</string>
    <string name="phone_number">Phone Number</string>
    <string name="verify">Verify</string>
    <string name="kitchens_around_you">Kitchens around you</string>
    <string name="order">Order</string>
    <string name="profile">Profile</string>
    <string name="view_plan">View Plan</string>
    <string name="select">SELECT</string>
    <string name="select_your_plan">Select your plan</string>
    <string name="added">ADDED</string>
    <string name="select_duraiton">Select Duration</string>
    <string name="place_order">Place Order</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="select_slot">Select Slot</string>
    <string name="deliver_at_home">Deliver at Home</string>
    <string name="change">Change</string>
    <string name="your_total_savings">Your Total Savings</string>
    <string name="weekly">Weekly</string>
    <string name="pay_now">Pay now</string>
    <string name="subscription">Subscription</string>
    <string name="plan_duration">Plan Duration</string>
    <string name="delivery_slot">Delivery Slot</string>
    <string name="delivery_charges">Delivery Charges</string>
    <string name="grand_total">Grand Total</string>
    <string name="com.crashlytics.android.build_id">1</string>
    <string name="cost_efficient">Cost-Efficient</string>
    <string name="enter_address_details">Enter complete address</string>
    <string name="full_name">Full Name</string>
    <string name="enter_full_name">Enter your full name</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="building_name">Building name / No.</string>
    <string name="area">Area</string>
    <string name="enter_address">Enter Address</string>
    <string name="zip_code">Zip Code</string>
    <string name="landmark">Landmark</string>
    <string name="city">City</string>
    <string name="add_address">Add Address</string>
    <string name="select_menu">SELECT MENU</string>
    <string name="select_duration">Select duration</string>
    <string name="view_menu">View Menu</string>
    <string name="slot_1">Slot - 1</string>
    <string name="view_order">View Order</string>
    <string name="subscription_cost">Subscription Cost</string>
    <string name="save_address_as">Save address as *</string>
    <string name="work">Work</string>
    <string name="hotel">Hotel</string>
    <string name="other">Other</string>
    <string name="add_other_type">Add other type</string>
    <string name="no_address_found">No address are added, please add you address to continue!</string>
    <string name="proceed">Proceed</string>
    <string name="payments">Payments</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="order_history">Order History</string>
    <string name="your_sub">Your Subscriptions</string>
    <string name="meal">meal name</string>
    <string name="amount">amount</string>
    <string name="manage_subscription">Manage Subscription</string>
</resources>