<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/otp_box"
            android:title="@string/menu_notifications" />
        <item
            android:id="@+id/nav_watch_history"
            android:icon="@drawable/otp_box"
            android:title="@string/menu_watch_history" />
        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/otp_box"
            android:title="@string/menu_contact_us" />

        <item
            android:id="@+id/nav_terms"
            android:icon="@drawable/otp_box"
            android:title="@string/menu_terms" />

        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/otp_box"
            android:title="@string/menu_help" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/otp_box"
            android:title="@string/menu_about" />

        <item
            android:id="@+id/nav_policy"
            android:icon="@drawable/otp_box"
            android:title="@string/menu_privacy" />

        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/otp_box"
            android:title="@string/menu_feedback" />

    </group>
</menu>