<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.mobile.cloudkitchen.ui.fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.mobile.cloudkitchen.ui.fragments.ContactUsFragment"
        android:label="@string/collection"
        tools:layout="@layout/fragment_contact_us" />

    <fragment
        android:id="@+id/nav_collections"
        android:name="com.mobile.cloudkitchen.ui.fragments.ContactUsFragment"
        android:label="@string/collection"
        tools:layout="@layout/fragment_contact_us" />
    <fragment
        android:id="@+id/nav_search"
        android:name="com.mobile.cloudkitchen.ui.fragments.ContactUsFragment"
        android:label="@string/collection"
        tools:layout="@layout/fragment_contact_us" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.mobile.cloudkitchen.ui.fragments.ContactUsFragment"
        android:label="@string/collection"
        tools:layout="@layout/fragment_contact_us" />

    <fragment
        android:id="@+id/nav_notifications"
        android:name="com.mobile.cloudkitchen.ui.fragments.ContactUsFragment"
        android:label="@string/menu_notifications"
        tools:layout="@layout/fragment_contact_us" />
</navigation>