<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F9F9F9"
    android:orientation="vertical"
    tools:context=".ui.fragments.LocationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <ImageView
                android:id="@+id/ic_back"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_alignParentStart="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="18dp"
                android:src="@drawable/ic_baseline_close_24"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/text_notifications"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/add_select_location"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
            <ImageView
                android:id="@+id/add_address"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_alignParentEnd="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="18dp"
                android:src="@drawable/baseline_add_circle_24" />
        </RelativeLayout>

        <androidx.appcompat.widget.SearchView
        android:id="@+id/location_search"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/edit_box"
        android:textCursorDrawable="@null"
        app:defaultQueryHint="@string/search_area_town_city"
        app:iconifiedByDefault="false"
        app:queryBackground="@null"
        app:suggestionRowLayout="@layout/location_search_layout" />
    <RelativeLayout
        android:id="@+id/use_my_location_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/edit_box"
        android:textCursorDrawable="@null"
        app:defaultQueryHint="@string/search"
        app:iconifiedByDefault="false"
        app:queryBackground="@null"
        app:suggestionRowLayout="@layout/location_search_layout" >
        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:src="@drawable/ic_location"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/use_my_location"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_forward"/>
    </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/add_select_location"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_addresses"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp" />
    </LinearLayout>
    <Button
        android:id="@+id/get_started_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="34dp"
        android:background="@drawable/login_btn_bg_shape"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="74dp"
        android:gravity="center"
        android:padding="14dp"
        android:text="Use this address"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="18sp" />
</RelativeLayout>